# Copyright (c) 2016 Adam Karpierz
# SPDX-License-Identifier: BSD-3-Clause

[build-system]
build-backend = 'setuptools.build_meta'
requires = ['setuptools>=80.9.0', 'packaging>=25.0.0']

[project]
name        = 'libpcap'
version     = '1.11.0b26'
description = 'Python binding for the libpcap C library.'
authors = [
    { name  = 'Adam Karpierz', email = 'adam@karpierz.net' },
]
maintainers = [
    { name  = 'Adam Karpierz', email = 'adam@karpierz.net' },
]
license = 'BSD-3-Clause'
license-files = ['LICENSE']
urls.Homepage      = 'https://pypi.org/project/libpcap/'
urls.Documentation = 'https://karpierz.github.io/libpcap/'
urls.History       = 'https://karpierz.github.io/libpcap/CHANGES.html'
urls.Download      = 'https://pypi.org/project/libpcap/'
urls.Repository    = 'https://github.com/karpierz/libpcap'
urls.Tracker       = 'https://github.com/karpierz/libpcap/issues'
urls.Sponsoring    = 'https://www.paypal.com/donate/?hosted_button_id=FX8L7CJUGLW7S'
keywords = ['pcap', 'libpcap', 'wpcap', 'npcap']
classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Operating System :: OS Independent',
    'Natural Language :: Polish',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: 3.14',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: Implementation :: CPython',
    'Programming Language :: Python :: Implementation :: PyPy',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Typing :: Typed',
]
requires-python = '>=3.10.0,<4.0.0'
dependencies = [
    # mandatory
    'setuptools>=80.9.0',
    'typing-extensions>=4.15.0',
    'pkg-about>=2.0.0',
    # others
    'py-utlx>=2.0.0',
]
dynamic = ['readme']
#scripts.'libpcap' = 'libpcap.__main__:main'
#gui-scripts.'libpcap-gui' = 'libpcap:main_gui'
#entry-points.'libpcap.magical'.epoint = 'libpcap:main_epoint'

[dependency-groups]
base = [
    'pip>=25.3',
    'setuptools>=80.9.0',
]
test = [
    { include-group = 'base' },
    'deepdiff>=8.6.1',
    'rich>=14.2.0',
]
coverage = [
    { include-group = 'test' },
    'coverage>=7.13.1',
    'covdefaults>=2.3.0',
    'diff-cover>=10.2.0',
]
docs = [
    { include-group = 'base' },
    'sphinx>=8.1.3',
    'pygments_ansi_color>=0.3.0', # fix sphinx load error
    'roman_numerals>=4.1.0',      #         -||-
    'sphinx-autodoc-typehints>=3.0.1',
    'sphinx-toolbox>=4.1.2',
    'sphinx-tabs>=3.4.5', # Do not change - sphinx-toolbox requires <3.4.7
    'sphinx-copybutton>=0.5.2',
    'sphinxcontrib-spelling>=8.0.2',
    'sphinx-lint>=1.0.2',
    'restructuredtext-lint>=2.0.2',
    'nbsphinx>=0.9.8',
]
build = [
    { include-group = 'test' },
    'check-manifest>=0.51',
    'build>=1.4.0',
    'twine>=6.2.0',
]
publish = [
    'twine>=6.2.0',
]
typing = [
    { include-group = 'base' },
    'mypy>=1.19.1',
    'mypy_extensions>=1.1.0',
    'types-setuptools>=80.9.0.20251223',
]
lint = [
    { include-group = 'test' },
    'flake8>=7.3.0',
    'flake8-in-file-ignores>=0.3.0',
    'flake8-pyproject>=1.2.4',
    'flake8-docstrings>=1.7.0',
    'pep8-naming>=0.15.1',
    'flake8-builtins>=3.1.0',
    'flake8-deprecated>=2.3.0',
]

[tool.setuptools.dynamic]
readme = { file = ['README.rst'], content-type = 'text/x-rst; charset=UTF-8' }

[tool.setuptools]
include-package-data = true
platforms = ['any']
zip-safe = false

[tool.setuptools.packages.find]
namespaces = false
where = ['src']

[tool.setuptools.package-dir]
'' = 'src'
#'libpcap.tests' = 'tests'

[tool.setuptools.package-data]
libpcap = [
    'libpcap.cfg',
]
'libpcap._platform' = [
    '*/*/*/*.dll',
    '*/*/*/*.so',
    '*/*/*/*.dylib',
    '*/*/*/*/*.dylib',
    '*/*/*/.keep',
    '*/*/*/*/.keep',
]

[tool.setuptools.exclude-package-data]
'*' = ['*.c','*.h','*.cpp','*.hpp','*.cxx','*.hxx','*.pyx','*.pxd']
libpcap = [
]

[tool.coverage]
# run
run.source = [
    'libpcap',
    'tests',
]
run.omit = [
    '**/_platform/linux/__init__.py',
    '**/_platform/macos/__init__.py',
    '**/tests/tman_*.py',
]
run.branch = true
run.data_file = '.tox/coverage/.coverage'
run.plugins = ['covdefaults']
# report
report.exclude_also = [
    # Regexes
    # Have to re-enable the standard pragma
    '^\s*if\s+self\.debug\s*:',
    '^\s*if\s+__debug__\s*:',
    '^\s*if\s+(0|False)\s*:',
    '''if\s+__name__.*\s*==\s*['"]__main__['"]\s*:''',
    '^\s*@unittest\.skip\(',
    '^\s*@unittest\.skipIf\(sys\.platform\.startswith\("win"\)',
    '^\s*@unittest\.skipIf\(is_windows,',
    '^\s*@unittest\.skipIf\(is_cpython,',
    'if typing.TYPE_CHECKING:',
]
report.omit = [
    'tests/run.py',
]
report.skip_covered = false
# html report
html.directory = '.tox/coverage/.coverage.html'

[tool.flake8]
filename = ['*.py','*.pyx']
#include = ['tests']
#exclude = ['.tox','*.egg','.git','__pycache__','build','_build','docs/_build','dist']
max-line-length = 99
ignore = ['E126','E203','E221','E251','E302','E701','E702','E731',
          'E122','E127','E128','E222','E272','E241','E266','E226',
          'D100','D101','D102','D103','D104','D400','D401','D202',
          'N806','N802','N803','N801',
          'I100','W503']
# (e.g. 'E4','W') default: 'E121','E123','126','226','E24','704'
#select =
#select = ['E','W','F','N','I']
output-file = '.tox/lint/flake8out.txt'
count = true
#show-pep8,
#show-source
#verbose
#quiet

[tool.mypy]
python_version = '3.10'
strict = true
sqlite_cache = true
warn_unused_configs = true
exclude_gitignore = true
install_types = true
non_interactive = true
pretty = true
check_untyped_defs = true
#ignore_missing_imports = true
files = ['src']
#exclude = ['docs/', 'tests/']

#
# Configuration(s) for tox
#

[tool.tox]
env_list = [{replace='ref',of=['tool','tox','labels','py'],extend=true},
            'typing', 'lint', 'docs']
skip_missing_interpreters = true
dependency_groups = ['base']
requires = [
    'tox>=4.34.1',
    'virtualenv>=20.36.1',
    'tox-backtick>=2.0.0',
]
[tool.tox.labels]
py = ['py310','py311','py312','py313','py314', 'pypy310','pypy311']
prepare = ['cleanup', 'prepare']
cleanup = ['cleanup']
coverage = ['coverage']
typing = ['typing']
lint = ['lint']
docs = ['docs']
build  = [{replace='ref',of=['tool','tox','labels','py'],extend=true}, 'docs', 'build']
deploy = [{replace='ref',of=['tool','tox','labels','build'],extend=true}, 'publish']

[tool.tox._.base]
base_python = ['python3.13']
dependency_groups = ['base']
package_subdir = 'libpcap'

[tool.tox.env_run_base]
description = 'Running tests under {base_python}'
pass_env = ['TOX_FIRST_BUILD']
set_env.PYTHONDONTWRITEBYTECODE = '1'
set_env.TMP_DIR  = '{env:TEMP:{env:TMP:{env:TMPDIR:/tmp}}}'
set_env.PKG_PVER = "`{env_python} -W ignore -c \"print('{py_dot_ver}'.replace('.', ''), end='')\" 2> nul`"
set_env.PKG_IMPL = "`{env_python} -W ignore -c \"print(dict(cpython='cp', pypy='pp').get('{py_impl}', ''), end='')\" 2> nul`"
set_env.PKG_NAME = "`{env_python} -W ignore -c \"import setuptools ; setuptools._distutils.core._setup_stop_after='config' ; print(setuptools.setup().metadata.get_name(),     end='')\" 2> nul`"
set_env.PKG_DIST = "`{env_python} -W ignore -c \"import setuptools ; setuptools._distutils.core._setup_stop_after='config' ; print(setuptools.setup().metadata.get_fullname(), end='')\" 2> nul`"
set_env.PKG_VER  = "`{env_python} -W ignore -c \"import setuptools ; setuptools._distutils.core._setup_stop_after='config' ; print(setuptools.setup().metadata.get_version(),  end='')\" 2> nul`"
commands = [
    ['{env_python}','--version'],
    ['{env_python}','-m','tests',{replace='posargs',extend=true}],
]
dependency_groups = ['test']

[tool.tox.env.'prepare']
description = 'Preparing the repository'
depends = ['cleanup']
base_python = {replace='ref',of=['tool','tox','_','base','base_python']}
skip_install = true
commands = [
    ['{env_python}','-W','ignore','-c','import os,subprocess ; cmd=".aprep.cmd" ; os.path.isfile(cmd) and subprocess.run([cmd])'],
]
dependency_groups = []

[tool.tox.env.'cleanup']
description = 'Cleaning the repository'
base_python = {replace='ref',of=['tool','tox','_','base','base_python']}
skip_install = true
no_package = true
env_log_dir = '{env:TMP_DIR}{/}tox.env.{env_name}-{env:PYTHONHASHSEED}{/}log'
env_tmp_dir = '{env:TMP_DIR}{/}tox.env.{env_name}-{env:PYTHONHASHSEED}{/}tmp'
allowlist_externals = ['cmd']
commands = [
    ['{env_python}','-W','ignore','-c','import os,subprocess ; cmd=".clean.cmd" ; os.path.isfile(cmd) and subprocess.run([cmd], stderr=subprocess.DEVNULL)'],
    ['{env_python}','-W','ignore','-c',"import shutil ; shutil.rmtree('build', ignore_errors=True)"],
    ['{env_python}','-W','ignore','-c',"import shutil ; shutil.rmtree('dist', ignore_errors=True)"],
    ['{env_python}','-W','ignore','-c',"import shutil,glob ; [shutil.rmtree(item) for item in glob.glob('src/*.egg-info')]"],
    ['{env_python}','-W','ignore','-c',"import shutil,glob ; [shutil.rmtree(item) for item in glob.glob('**/__pycache__', recursive=True)]"],
    ['{env_python}','-W','ignore','-c',"import shutil,glob ; [shutil.rmtree(item) for item in glob.glob('**/.mypy_cache', recursive=True)]"],
    ['cmd','/C','if','exist','.tox','rmdir','/S/Q','.tox','2>','nul'],
    ['cmd','/C','if','exist','.tox','rmdir','/S/Q','.tox','2>','nul'],
]
dependency_groups = []

[tool.tox.env.'coverage']
description = 'Running code coverage analysis'
base_python = {replace='ref',of=['tool','tox','_','base','base_python']}
commands = [
    ['{env_python}','-m','coverage','erase'],
    ['-','{env_python}','-m','coverage','run','-m','tests',{replace='posargs',extend=true}],
    ['-','{env_python}','-m','coverage','html'],
    ['{env_python}','-m','coverage','report'],
]
dependency_groups = ['coverage']

[tool.tox.env.'docs']
description = 'Building documentation and running doc tests'
base_python = {replace='ref',of=['tool','tox','_','base','base_python']}
commands = [
    ['{env_python}','-m','sphinxlint','-i','#arch','-i','.tox','-i','build','-i','dist','-i','.mypy_cache'],
   #['{env_python}','-m','sphinx.apidoc','-f','{env_site_packages_dir}/{[tool.tox._.base]package_subdir}'],
    ['{env_python}','-m','sphinx.cmd.build','-W','-a','-b','html','-E','./docs','./build/docs/html'],
    ['{env_python}','-m','sphinx.cmd.build','-W','-a','-b','doctest',  './docs','./build/docs/html'],
    ['{env_python}','-m','sphinx.cmd.build','-W','-a','-b','linkcheck','./docs','./build/docs/html'],
]
dependency_groups = ['docs']

[tool.tox.env.'build']
description = 'Building the package'
depends = [{replace='ref',of=['tool','tox','labels','py'],extend=true}, 'docs']
base_python = {replace='ref',of=['tool','tox','_','base','base_python']}
commands = [
    ['{env_python}','-m','check_manifest','-v','--ignore-bad-ideas','*.so'],
    ['{env_python}','-m','build'],
    # Verify distribution files
    ['{env_python}','-m','twine','check','dist/*'],
]
dependency_groups = ['build']

[tool.tox.env.'publish']
description = 'Publishing the package and documentation'
depends = ['build']
base_python = {replace='ref',of=['tool','tox','_','base','base_python']}
skip_install = true
allowlist_externals = ['git']
commands = [
    # Publish on PyPI
    ['{env_python}','-m','twine','upload','dist/*'],
    # Publish documentation on GitHub Pages
    # checkout gh-pages worktree
    ['{env_python}','-W','ignore','-c','import shutil ; shutil.rmtree(r"{env_dir}/gh-pages", ignore_errors=True)'],
    ['git','worktree','prune'],
    #['git','worktree','add','{env_dir}/gh-pages','gh-pages'],
    ['git','worktree','add','-B','gh-pages','{env_dir}/gh-pages'],
    # clean old docs
    ['{env_python}','-W','ignore','-c','import pathlib ; pathlib.Path(r"{env_dir}/gh-pages/.nojekyll").touch()'],
    ['{env_python}','-W','ignore','-c','import os,shutil ; path=r"{env_dir}/gh-pages" ; [shutil.rmtree(f,ignore_errors=True) if os.path.isdir(f:=os.path.join(path,n)) else (os.remove(f) if os.path.isfile(f) else None) for n in os.listdir(path) if n not in (".git",".nojekyll")]'],
    # copy new docs
    ['{env_python}','-W','ignore','-c','import shutil ; shutil.copytree(r"build/docs/html",r"{env_dir}/gh-pages",dirs_exist_ok=True)'],
    # commit + push
    ['git','-C','{env_dir}/gh-pages','add','.'],
    ['git','-C','{env_dir}/gh-pages','commit','-m','Update documentation'],
    ['git','-C','{env_dir}/gh-pages','push','--force','origin','gh-pages'],
    # remove worktree
    ['git','worktree','remove','--force','{env_dir}/gh-pages'],
    ['{env_python}','-W','ignore','-c','import shutil ; shutil.rmtree(r"{env_dir}/gh-pages", ignore_errors=True)'],
    ['git','worktree','prune'],
]
dependency_groups = ['publish']

[tool.tox.env.'typing']
description = 'Static type checking'
base_python = {replace='ref',of=['tool','tox','_','base','base_python']}
commands = [
    ['{env_python}','-m','mypy'],
]
dependency_groups = ['typing']

[tool.tox.env.'lint']
description = 'Checking code style and quality'
base_python = {replace='ref',of=['tool','tox','_','base','base_python']}
commands = [
    ['{env_python}','-m','flake8','{env_site_packages_dir}/{[tool.tox._.base]package_subdir}/'],
]
dependency_groups = ['lint']
