[metadata]
long_description = file: README.rst, CHANGES.rst
keywords = pcap, libpcap, wpcap, npcap
platforms = any
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Natural Language :: Polish
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: Stackless
    Programming Language :: Python :: Implementation :: PyPy
    Programming Language :: Python :: Implementation :: IronPython
    Programming Language :: Python :: Implementation :: Jython
    Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >=2.7.0,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*
setup_requires =
    setuptools>=40.7.3
    typing;python_version<'3.5'
install_requires =
    setuptools>=40.7.3
    cffi>=1.11.5
packages = find:
package_dir =
    = src
zip_safe = True

[options.packages.find]
where = src

[options.package_data]
libpcap = libpcap.cfg
libpcap._platform = */*/*.dll, */*/*.so, */*/.keep

[options.extras_require]
doc =
    Sphinx>=2.0.1
    restructuredtext-lint>=1.3.0
test =
    unittest2;python_version<'3.0'
    mock>=2.0.0;python_version<'3.0'
    win_inet_pton>=1.0.1;python_version<'3.0'

[sdist]
formats = zip

[bdist_wheel]
universal = True

[build_sphinx]
source-dir = docs
build-dir = docs/_build
builder = html
all_files = True
warning-is-error = True
